cleanup (remove ROMAJI_BLOCKS)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "successive_romaji"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "successive_romaji"
+crate-type = ["cdylib"]
 
 [dependencies]
+pyo3 = "0.21.2"
